crates/solidity/testing/snapshots/bindings_output/using/global_and_local/generated/0.8.4-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

[39mReferences and definitions:[0m 
   ╭─[ main.sol:1:1 ]
   │
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
   │ 
 6 │     function test() public pure {
   │              ──┬─  
   │                ╰─── name: 2
 7 │         Amount x;
   │                ┬  
   │                ╰── name: 3
   │
   ├─[ main.sol:1:1 ]
   │
 4 │     using AmountLib for Amount;
   │           ────┬────     ───┬──  
   │               ╰───────────────── unresolved
   │                            │    
   │                            ╰──── unresolved
   │ 
 7 │         Amount x;
   │         ───┬──  
   │            ╰──── unresolved
 8 │         x.nop().min();
   │         ┬ ─┬─   ─┬─  
   │         ╰──────────── ref: 3
   │            │     │   
   │            ╰───────── unresolved
   │                  │   
   │                  ╰─── unresolved
 9 │         x.min();
   │         ┬ ─┬─  
   │         ╰────── ref: 3
   │            │   
   │            ╰─── unresolved
───╯
[39mDefiniens:[0m 
    ╭─[ main.sol:1:1 ]
    │
  2 │ ╭─▶ 
    ┆ ┆   
 11 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ main.sol:1:1 ]
    │
  5 │ ╭─▶ 
    ┆ ┆   
 10 │ ├─▶     }
    │ │           
    │ ╰─────────── definiens: 2
    │
    ├─[ main.sol:1:1 ]
    │
  7 │         Amount x;
    │ ─────────┬────────  
    │          ╰────────── definiens: 3
────╯
Parse errors:
Error: Expected AddressKeyword or BoolKeyword or BytesKeyword or ContractKeyword or EnumKeyword or ErrorKeyword or FixedKeyword or FunctionKeyword or Identifier or ImportKeyword or IntKeyword or InterfaceKeyword or LibraryKeyword or MappingKeyword or PragmaKeyword or StringKeyword or StructKeyword or UfixedKeyword or UintKeyword.
    ╭─[ lib.sol:1:1 ]
    │
  1 │ ╭─▶ type Amount is uint64;
    ┆ ┆   
 13 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯
[39mReferences and definitions:[0m 
[39mDefiniens:[0m 
